delete function in BasePage, add folder utilities

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "codeceptjs:ui": "codecept-ui --app",
         "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
         "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-        "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
+        "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples",
+        "allure:generate": "allure generate allure-results --clean -o allure-report",
+        "allure:open": "npx http-server allure-report"
     },
     "devDependencies": {
         "@codeceptjs/configure": "^1.0.6",
@@ -17,7 +19,6 @@
         "appium": "^2.19.0",
         "appium-uiautomator2-driver": "^4.2.4",
         "chai": "^5.2.0",
-        "codeceptjs": "^3.7.3",
         "playwright": "^1.53.2"
     },
     "dependencies": {
